# eol-checker

./: .gitignore  README.md  pyproject.toml
samples/: build-report.md  build.gradle
src/eol_checker/: __init__.py  checker.py  cli.py  discovery.py  eol_api.py  models.py  purl.py  report.py  resolution.py
src/eol_checker/data/: __init__.py  product_map.toml
src/eol_checker/parsers/: __init__.py  base.py  gradle.py  gradle_catalog.py  maven.py  requirements.py
src/eol_checker/providers/: __init__.py  base.py  depsdev.py  eol.py  osv.py
tests/: test_checker.py  test_cli.py  test_discovery.py  test_eol_api.py  test_gradle_catalog_parser.py  test_gradle_parser.py  test_maven_parser.py  test_providers.py  test_report.py  test_requirements_parser.py  test_resolution.py
tests/fixtures/: build.gradle  pom.xml  requirements.txt
