[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eol-checker"
version = "0.1.0"
description = "Scan dependency manifests and check package versions against endoflife.date"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "eol-checker contributors" }]
keywords = ["eol", "end-of-life", "dependencies", "gradle", "security"]
dependencies = [
    "httpx>=0.27",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[project.scripts]
eol-checker = "eol_checker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
